--- a/app/src/main/res/layout/activity_showrooms.xml
+++ b/app/src/main/res/layout/activity_showrooms.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowroomsActivity">
+    tools:context=".ShowroomsActivity"
+    android:orientation="vertical">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/headingShowroom"
+        style="@style/headingOne"
 
-</android.support.constraint.ConstraintLayout>
+        />
+    <ListView
+        android:id="@+id/showroomListView"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:background="@android:color/holo_green_dark">
+
+    </ListView>
+
+</LinearLayout>
